generated/RobotLangParser.py
# Generated from RobotLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
    from typing import TextIO


class RobotLangParser ( Parser ):

    grammarFileName = "RobotLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "'{'", "'}'", "':'", 
                     "'<'", "'>'", "'=='", "'sensor'", "'rutina'", "'si'", 
                     "'sino'", "'ejecutar'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SENSOR", "RUTINA", "SI", 
                      "SINO", "EJECUTAR", "ID", "NUMBER", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_routine = 2
    RULE_statement = 3
    RULE_control = 4
    RULE_action = 5
    RULE_call = 6
    RULE_expr = 7
    RULE_comparator = 8

    ruleNames =  [ "program", "declaration", "routine", "statement", "control", 
                   "action", "call", "expr", "comparator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    SENSOR=10
    RUTINA=11
    SI=12
    SINO=13
    EJECUTAR=14
    ID=15
    NUMBER=16
    WS=17
    COMMENT=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RobotLangParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RobotLangParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(RobotLangParser.DeclarationContext,i)


        def routine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RobotLangParser.RoutineContext)
            else:
                return self.getTypedRuleContext(RobotLangParser.RoutineContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RobotLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(RobotLangParser.StatementContext,i)


        def getRuleIndex(self):
            return RobotLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = RobotLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 21
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [10]:
                    self.state = 18
                    self.declaration()
                    pass
                elif token in [11]:
                    self.state = 19
                    self.routine()
                    pass
                elif token in [12, 14, 15]:
                    self.state = 20
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 56320) != 0)):
                    break

            self.state = 25
            self.match(RobotLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SENSOR(self):
            return self.getToken(RobotLangParser.SENSOR, 0)

        def ID(self):
            return self.getToken(RobotLangParser.ID, 0)

        def getRuleIndex(self):
            return RobotLangParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = RobotLangParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(RobotLangParser.SENSOR)
            self.state = 28
            self.match(RobotLangParser.ID)
            self.state = 29
            self.match(RobotLangParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoutineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RUTINA(self):
            return self.getToken(RobotLangParser.RUTINA, 0)

        def ID(self):
            return self.getToken(RobotLangParser.ID, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RobotLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(RobotLangParser.StatementContext,i)


        def getRuleIndex(self):
            return RobotLangParser.RULE_routine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoutine" ):
                listener.enterRoutine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoutine" ):
                listener.exitRoutine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoutine" ):
                return visitor.visitRoutine(self)
            else:
                return visitor.visitChildren(self)




    def routine(self):

        localctx = RobotLangParser.RoutineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_routine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(RobotLangParser.RUTINA)
            self.state = 32
            self.match(RobotLangParser.ID)
            self.state = 33
            self.match(RobotLangParser.T__1)
            self.state = 34
            self.match(RobotLangParser.T__2)
            self.state = 35
            self.match(RobotLangParser.T__3)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.statement()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 53248) != 0)):
                    break

            self.state = 41
            self.match(RobotLangParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def control(self):
            return self.getTypedRuleContext(RobotLangParser.ControlContext,0)


        def action(self):
            return self.getTypedRuleContext(RobotLangParser.ActionContext,0)


        def call(self):
            return self.getTypedRuleContext(RobotLangParser.CallContext,0)


        def getRuleIndex(self):
            return RobotLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = RobotLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.control()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.action()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.call()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ControlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(RobotLangParser.SI, 0)

        def expr(self):
            return self.getTypedRuleContext(RobotLangParser.ExprContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RobotLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(RobotLangParser.StatementContext,i)


        def SINO(self):
            return self.getToken(RobotLangParser.SINO, 0)

        def getRuleIndex(self):
            return RobotLangParser.RULE_control

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterControl" ):
                listener.enterControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitControl" ):
                listener.exitControl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitControl" ):
                return visitor.visitControl(self)
            else:
                return visitor.visitChildren(self)




    def control(self):

        localctx = RobotLangParser.ControlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_control)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(RobotLangParser.SI)
            self.state = 49
            self.expr()
            self.state = 50
            self.match(RobotLangParser.T__5)
            self.state = 51
            self.statement()
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 52
                self.match(RobotLangParser.SINO)
                self.state = 53
                self.match(RobotLangParser.T__5)
                self.state = 54
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EJECUTAR(self):
            return self.getToken(RobotLangParser.EJECUTAR, 0)

        def ID(self):
            return self.getToken(RobotLangParser.ID, 0)

        def getRuleIndex(self):
            return RobotLangParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction" ):
                return visitor.visitAction(self)
            else:
                return visitor.visitChildren(self)




    def action(self):

        localctx = RobotLangParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_action)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(RobotLangParser.EJECUTAR)
            self.state = 58
            self.match(RobotLangParser.ID)
            self.state = 59
            self.match(RobotLangParser.T__1)
            self.state = 60
            self.match(RobotLangParser.T__2)
            self.state = 61
            self.match(RobotLangParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RobotLangParser.ID, 0)

        def getRuleIndex(self):
            return RobotLangParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = RobotLangParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(RobotLangParser.ID)
            self.state = 64
            self.match(RobotLangParser.T__1)
            self.state = 65
            self.match(RobotLangParser.T__2)
            self.state = 66
            self.match(RobotLangParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RobotLangParser.ID, 0)

        def comparator(self):
            return self.getTypedRuleContext(RobotLangParser.ComparatorContext,0)


        def NUMBER(self):
            return self.getToken(RobotLangParser.NUMBER, 0)

        def getRuleIndex(self):
            return RobotLangParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = RobotLangParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(RobotLangParser.ID)
            self.state = 69
            self.comparator()
            self.state = 70
            self.match(RobotLangParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RobotLangParser.RULE_comparator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparator" ):
                listener.enterComparator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparator" ):
                listener.exitComparator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparator" ):
                return visitor.visitComparator(self)
            else:
                return visitor.visitChildren(self)




    def comparator(self):

        localctx = RobotLangParser.ComparatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comparator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 896) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





